# Go-Kade

./: BUGS  Makefile.am  README  README.Themes  acinclude.m4  build-go.sh  config.h  config.h.in  config.status  configure  export.mingw32  kade.6  kade.go  kade.h  kade.lsm.in  kade.spec  kade.texinfo  menu.c  settings.go  system.h  tarball.c
CVS/: Entries  Repository
art/.xvpics/CVS/: Entries  Repository  Root
art/CVS/: Entries  Repository
old-src/: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.in  README  TODO  aclocal.m4  config.cache  configure.in  confile.c  kade.blend  kade.c  kade.info  kade.lsm  kade.spec.in  kaderc  kaderc.7  maketheme.sh  mame.c  mkinstalldirs  mysql_kade.sql  sound.c  sql.c  tar.h  xmalloc.c
scripts/: update_roms.pl
scripts/CVS/: Entries  Repository  Root
themes/: default.tgz  kadeos.tgz
themes/CVS/: Entries  Repository
