dnl Process this file with autoconf to produce a configure script.

AC_INIT(kade.c)
dnl Every other copy of the package version number gets its value from here
AM_INIT_AUTOMAKE(kade, 0.1.0)

SDL_VERSION=1.2.3

dnl create a config.h file (Automake will add -DHAVE_CONFIG_H)
AM_CONFIG_HEADER(config.h)

AC_SUBST(VERSION)

ISODATE=`date +%Y-%m-%d`
AC_SUBST(ISODATE)

AC_CANONICAL_HOST

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h sys/param.h sys/time.h time.h sys/mkdev.h sys/sysmacros.h string.h memory.h fcntl.h dirent.h sys/ndir.h ndir.h alloca.h locale.h )


jm_CHECK_TYPE_STRUCT_UTIMBUF
AC_HEADER_MAJOR
AC_FUNC_ALLOCA
AC_STRUCT_TM
AC_STRUCT_ST_BLOCKS
AC_FUNC_CLOSEDIR_VOID
AC_CHECK_FUNCS(mkfifo)
AC_CHECK_FUNC(mknod)

dnl Checks for typedefs, structures, and compiler characteristics.

# Default settings
def_mysql_active=no
def_mysql_includes=/usr/include/mysql
def_mysql_libs=/usr/lib/mysql


dnl Checks for library functions.
AM_PATH_SDL($SDL_VERSION,
            :,
            AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!])
)
CFLAGS="$CFLAGS $SDL_CFLAGS"
LIBS="$LIBS $SDL_LIBS"

dnl Choose MySQL Support
dnl
AC_MSG_CHECKING(use mysql support)
AC_ARG_ENABLE(mysql_active,
	[  --enable-mysql-active                   [[no]] Compile MySQL into KADE],
	mysql_active=yes,
	mysql_active=no)
AC_MSG_RESULT($mysql_active)
if test "$mysql_active" = yes; then
   mysql_active=1
   sql_active=1
elif test "$mysql_active" = no; then
   mysql_active=0
   sql_active=0
else
   mysql_active=$def_mysql_active
   mysql_active=$def_sql_active
fi
AC_DEFINE_UNQUOTED(WITH_MYSQL, $mysql_active, [ Mysql ACTIVE ])
if test "$mysql_active" = 1; then
  AC_DEFINE_UNQUOTED(WITH_SQL, $mysql_active, [ sql ACTIVE ])
  AC_CHECK_LIB([mysqlclient], [main])
fi

dnl Choose MySQL Include Support
dnl
AC_MSG_CHECKING(which mysql includes)
AC_ARG_WITH(mysql_includes,
	[  --with-mysql-includes=PATH       [[/usr/include/mysql]] path to mysql includes],
	mysql_includes="-I$withval",
	mysql_includes="-I$def_mysql_includes")
AC_MSG_RESULT($mysql_includes)
if test "$mysql_includes" = 1; then
  MYSQL_INCLUDES=$mysql_includes
  AC_SUBST(MYSQL_INCLUDES)
fi

dnl Choose MySQL Lib
dnl
AC_MSG_CHECKING(which mysql libs)
AC_ARG_WITH(mysql_libs,
	[  --with-mysql-libs=PATH           [[/usr/lib/mysql]] path to mysql libs],
	mysql_libs="-L$withval -lmysqlclient",
	mysql_libs="-L$def_mysql_libs -lmysqlclient")
AC_MSG_RESULT($mysql_libs)
if test "$mysql_active" = 1; then
   MYSQL_LIBS=$mysql_libs
   AC_SUBST(MYSQL_LIBGS)
fi

AC_CHECK_LIB([SDL_image], [main])
AC_SUBST("-lSDL_image")

AC_CHECK_LIB([SDL_ttf], [main])
AC_SUBST("-lSDL_ttf")

AC_CHECK_LIB([SDL_mixer], [main])
AC_SUBST("-lSDL_mixer")

AC_CHECK_LIB([z], [main])
AC_SUBST("-lz")

AC_OUTPUT(Makefile kade.lsm kade.spec)


